--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Hack Reactor Student User Group Page</title>
 	
-<link href="css.css" rel="stylesheet">
+<link href="./css.css" rel="stylesheet">
 </head>
 <body>
 <div>
