--- a/index.html
+++ b/index.html
@@ -3,7 +3,26 @@
 <head>
 	<title>Hack Reactor Student User Group Page</title>
 	
-<link href="/css.css" rel="stylesheet">
+	<style>
+		h1 {
+			color: red;
+			border: 2px solid red;
+		}
+
+		p {
+			font-family: Courier;
+			background-color: yellow;
+
+		}
+		#head {
+			font-size: 2em;
+		}
+		#aboutus {
+			font-size: 0.5em;
+		}
+	</style>
+
+
 </head>
 <body>
 <div>
