--- a/index.html
+++ b/index.html
@@ -2,6 +2,24 @@
 <html>
 <head>
 	<title>Hack Reactor Student User Group Page</title>
+		<style>
+		h1 {
+			color: red;
+			border: 2px solid red;
+		}
+
+		p {
+			font-family: Courier;
+			background-color: yellow;
+
+		}
+		#head {
+			font-size: 2em;
+		}
+		#aboutus {
+			font-size: 0.5em;
+		}
+	</style>
 </head>
 <body>
 <div>
